--- a/Program/TimeAndTune/TimeAndTune/Pages/StatisticsPage.xaml
+++ b/Program/TimeAndTune/TimeAndTune/Pages/StatisticsPage.xaml
@@ -4,15 +4,59 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:TimeAndTune"
+      xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
       mc:Ignorable="d" 
       d:DesignHeight="1080" d:DesignWidth="1920"
       Background="#25232A"
       Title="StatisticsPage">
-
     <Grid>
         <Grid.LayoutTransform>
             <ScaleTransform ScaleX="0.75" ScaleY="0.75" />
         </Grid.LayoutTransform>
+
+        <lvc:CartesianChart 
+            Series="{Binding SeriesCollection}"
+            Width="1400"
+            Height="650"
+            Margin="0,230,0,0"
+            VerticalAlignment="Center"
+            HorizontalAlignment="Center"
+            >
+            <lvc:CartesianChart.AxisX>
+                <lvc:Axis FontSize="20">
+                    <lvc:Axis.Foreground>
+                        <SolidColorBrush Color="#FFFFFF"/>
+                    </lvc:Axis.Foreground>
+                    <lvc:Axis.Separator>
+                        <lvc:Separator IsEnabled="False"/>
+                    </lvc:Axis.Separator>
+                    <lvc:Axis.Labels>
+                        <Binding Path="Labels"/>
+                    </lvc:Axis.Labels>
+                </lvc:Axis>
+            </lvc:CartesianChart.AxisX>
+            <lvc:CartesianChart.AxisY>
+                <lvc:Axis FontSize="20">
+                    <lvc:Axis.Foreground>
+                        <SolidColorBrush Color="#FFFFFF"/>
+                    </lvc:Axis.Foreground>
+                    <lvc:Axis.Separator>
+                        <lvc:Separator IsEnabled="False" Step="1"/>
+                    </lvc:Axis.Separator>
+                </lvc:Axis>
+            </lvc:CartesianChart.AxisY>
+
+            <lvc:CartesianChart.Style>
+                <Style TargetType="lvc:CartesianChart" >
+                    <Setter Property="Foreground" Value="#FFFFFF"/>
+                </Style>
+            </lvc:CartesianChart.Style>
+            
+        </lvc:CartesianChart>
+
+
+
+
 
         <Image Source="/Pages/menu_icon.png"
                Width="90"
@@ -226,35 +270,6 @@
                 </Style>
             </Button.Style>
         </Button>
-        <Rectangle 
-            RadiusX="5.5" 
-            RadiusY="5.5"
-            Margin="340,378,0,0" 
-            VerticalAlignment="Top" 
-            HorizontalAlignment="Left"
-            Width="11"
-            Height="544"
-            Fill="#575757"
-            />
-        <Rectangle 
-            RadiusX="5.5" 
-            RadiusY="5.5" 
-            Margin="960,0,0,-485"
-            VerticalAlignment="Bottom"
-            HorizontalAlignment="Left"
-            Width="11"
-            Height="1250"
-            Fill="#575757" 
-            RenderTransformOrigin="0.5,0.5">
-            <Rectangle.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="-90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Rectangle.RenderTransform>
-        </Rectangle>
         <Rectangle
             RadiusX="27"
             RadiusY="27" 
@@ -299,194 +314,5 @@
             Margin="1905,889,0,0"
             VerticalAlignment="Top"
             HorizontalAlignment="Left" />
-        <TextBlock
-            Text="2.09"
-            FontSize="30"
-            Foreground="#FFFFFF"
-            Margin="425,942,0,0"
-            VerticalAlignment="Top"
-            HorizontalAlignment="Left" />
-        <TextBlock
-            Text="3" 
-            FontSize="30"
-            Foreground="#FFFFFF"
-            Margin="300,765,0,0" 
-            VerticalAlignment="Top"
-            HorizontalAlignment="Left" />
-        <TextBlock
-            Text="2"
-            FontSize="30"
-            Foreground="#FFFFFF"
-            Margin="300,853,0,0"
-            VerticalAlignment="Top" 
-            HorizontalAlignment="Left" />
-        <TextBlock
-            Text="5"
-            FontSize="30"
-            Foreground="#FFFFFF"
-            Margin="300,589,0,0"
-            VerticalAlignment="Top"
-            HorizontalAlignment="Left" />
-        <TextBlock 
-            Text="4" 
-            FontSize="30"
-            Foreground="#FFFFFF"
-            Margin="300,677,0,0"
-            VerticalAlignment="Top"
-            HorizontalAlignment="Left" />
-        <TextBlock
-            Text="6" 
-            FontSize="30"
-            Foreground="#FFFFFF"
-            Margin="300,490,0,0"
-            VerticalAlignment="Top"
-            HorizontalAlignment="Left" />
-        <TextBlock
-            Text="3.09" 
-            FontSize="30"
-            Foreground="#FFFFFF"
-            Margin="590,942,0,0" 
-            VerticalAlignment="Top"
-            HorizontalAlignment="Left" />
-        <TextBlock 
-            Text="4.09" 
-            FontSize="30"
-            Foreground="#FFFFFF"
-            Margin="765,942,0,0" 
-            VerticalAlignment="Top"
-            HorizontalAlignment="Left" />
-        <TextBlock 
-            Text="5.09" 
-            FontSize="30"
-            Foreground="#FFFFFF"
-            Margin="945,942,0,0"
-            VerticalAlignment="Top" 
-            HorizontalAlignment="Left" />
-        <TextBlock 
-            Text="6.09" 
-            FontSize="30"
-            Foreground="#FFFFFF"
-            Margin="1115,942,0,0"
-            VerticalAlignment="Top"
-            HorizontalAlignment="Left" />
-        <TextBlock 
-            Text="7.09" 
-            FontSize="30"
-            Foreground="#FFFFFF"
-            Margin="1285,942,0,0" 
-            VerticalAlignment="Top"
-            HorizontalAlignment="Left" />
-        <TextBlock
-            Text="8.09" 
-            FontSize="30"
-            Foreground="#FFFFFF"
-            Margin="1455,942,0,0" 
-            VerticalAlignment="Top" 
-            HorizontalAlignment="Left" />
-        <Rectangle
-            RadiusX="8"
-            RadiusY="8" 
-            Margin="400,502,0,0"
-            VerticalAlignment="Top" 
-            HorizontalAlignment="Left"
-            Width="103"
-            Height="420">
-            <Rectangle.Fill>
-            <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
-                <GradientStop Color="#7F22AB" Offset="0" />
-                <GradientStop Color="#6D6770" Offset="1" />
-            </LinearGradientBrush>
-            </Rectangle.Fill>
-        </Rectangle>
-        <Rectangle 
-            RadiusX="8" 
-            RadiusY="8"
-            Margin="565,678,0,0"
-            VerticalAlignment="Top"
-            HorizontalAlignment="Left"
-            Width="103" 
-            Height="244">
-            <Rectangle.Fill>
-                <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
-                    <GradientStop Color="#7F22AB" Offset="0" />
-                    <GradientStop Color="#6D6770" Offset="1" />
-                </LinearGradientBrush>
-            </Rectangle.Fill>
-        </Rectangle>
-        <Rectangle 
-            RadiusX="8"
-            RadiusY="8" 
-            Margin="745,539,0,0" 
-            VerticalAlignment="Top"
-            HorizontalAlignment="Left"
-            Width="103"
-            Height="383">
-            <Rectangle.Fill>
-            <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
-                <GradientStop Color="#7F22AB" Offset="0" />
-                <GradientStop Color="#6D6770" Offset="1" />
-            </LinearGradientBrush>
-            </Rectangle.Fill>
-        </Rectangle>
-        <Rectangle
-            RadiusX="8"
-            RadiusY="8" 
-            Margin="920,621,0,0"
-            VerticalAlignment="Top"
-            HorizontalAlignment="Left"
-            Width="103"
-            Height="301">
-            <Rectangle.Fill>
-                <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
-                    <GradientStop Color="#7F22AB" Offset="0" />
-                    <GradientStop Color="#6D6770" Offset="1" />
-                </LinearGradientBrush>
-            </Rectangle.Fill>
-        </Rectangle>
-        <Rectangle 
-            RadiusX="8"
-            RadiusY="8" 
-            Margin="1090,872,0,0"
-            VerticalAlignment="Top"
-            HorizontalAlignment="Left" 
-            Width="103" 
-            Height="50">
-            <Rectangle.Fill>
-                <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
-                    <GradientStop Color="#7F22AB" Offset="0" />
-                    <GradientStop Color="#6D6770" Offset="1" />
-                </LinearGradientBrush>
-            </Rectangle.Fill>
-        </Rectangle>
-        <Rectangle
-            RadiusX="8"
-            RadiusY="8"
-            Margin="1260,758,0,0"
-            VerticalAlignment="Top" 
-            HorizontalAlignment="Left"
-            Width="103" 
-            Height="164">
-            <Rectangle.Fill>
-                <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
-                    <GradientStop Color="#7F22AB" Offset="0" />
-                    <GradientStop Color="#6D6770" Offset="1" />
-                </LinearGradientBrush>
-            </Rectangle.Fill>
-        </Rectangle>
-        <Rectangle 
-            RadiusX="8" 
-            RadiusY="8"
-            Margin="1430,758,0,0"
-            VerticalAlignment="Top"
-            HorizontalAlignment="Left" 
-            Width="103" 
-            Height="164">
-            <Rectangle.Fill>
-                <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
-                    <GradientStop Color="#7F22AB" Offset="0" />
-                    <GradientStop Color="#6D6770" Offset="1" />
-                </LinearGradientBrush>
-            </Rectangle.Fill>
-        </Rectangle>
     </Grid>
 </Page>
