--- a/Program/TimeAndTune/TimeAndTune/Pages/LoginPage.xaml
+++ b/Program/TimeAndTune/TimeAndTune/Pages/LoginPage.xaml
@@ -168,6 +168,7 @@
             Width="342" Height="112"
             VerticalAlignment="Top"
             HorizontalAlignment="Center"
+            Click="Continue_Click"
             >
             <Button.Style>
                 <Style TargetType="Button">
