added login/register navigations

--- a/Program/TimeAndTune/TimeAndTune/DialogWindows/UserInfoWindow.xaml
+++ b/Program/TimeAndTune/TimeAndTune/DialogWindows/UserInfoWindow.xaml
@@ -81,6 +81,7 @@
             Background="Transparent"
             Width="100"
             Height="30"
+            Click="exit_Click"
             >
             <Button.Style>
                 <Style TargetType="Button">
