--- a/Program/TimeAndTune/TimeAndTune/Pages/LoginPage.xaml
+++ b/Program/TimeAndTune/TimeAndTune/Pages/LoginPage.xaml
@@ -222,6 +222,7 @@
             Width="342" Height="62"
             VerticalAlignment="Top"
             HorizontalAlignment="Center"
+            Click="onCreateAccount_Click"
             >
             <Button.Style>
                 <Style TargetType="Button">
