--- a/Program/TimeAndTune/TimeAndTune/Pages/RegisterPage.xaml
+++ b/Program/TimeAndTune/TimeAndTune/Pages/RegisterPage.xaml
@@ -307,6 +307,7 @@
             Width="342" Height="112"
             VerticalAlignment="Top"
             HorizontalAlignment="Center"
+            Click="Continue_Click"
             >
             <Button.Style>
                 <Style TargetType="Button">
@@ -339,6 +340,7 @@
             Width="540" Height="120"
             VerticalAlignment="Top"
             HorizontalAlignment="Center"
+            Click="onSignIn_Click"
             >
             <Button.Style>
                 <Style TargetType="Button">
